--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,2 +1,4 @@
+<app-hearder-component></app-hearder-component>
 <app-balance-component></app-balance-component>
 <app-current-ticket-component></app-current-ticket-component>
+<app-navegation-component></app-navegation-component>
