--- a/src/app/components/balance-component/balance-component.html
+++ b/src/app/components/balance-component/balance-component.html
@@ -40,6 +40,9 @@
                 <h2>R$ 25,00</h2>
                 <h3>**** **** **** 1234</h3>
             </div>
+            <div class="cards" (click)="pulsCardNavegation()">
+                <div class="plus-card"><img src="plus.svg" alt="puls"></div>
+            </div>
         </div>
     </div>
 </section>
