--- a/src/app/components/history-component/history-component.html
+++ b/src/app/components/history-component/history-component.html
@@ -1,61 +1,19 @@
 <section>
     <div class="container">
-        <h1>Histórico de Tickets</h1>
-        <div class="filter">
-            <button>Ticket</button>
-            <button>Cartão</button>
+        <div class="title">
+            <h1>Histórico de Tickets</h1>
         </div>
-        <div class="ticket-wrap">
-            <div class="tickect">
-                <div class="location-value">
-                    <h2>UNINASSAU - G1</h2>
-                    <h2>R$ 6,75</h2>
-                </div>
-                <div class="date-status">
-                    <h3>10/11/2025</h3>
-                    <h3>Pago</h3>
-                </div>
-                <div class="hour-id-btn">
-                    <div class="text">
-                        <h3>2h 35min</h3>
-                        <h3>ID: TK2024-001233</h3>
-                    </div>
-                    <a href="">Contestar</a>
-                </div>
+        <div class="content">
+            <div class="filter">
+                <button (click)="ticket()" [class.ativo]="options == true">Ticket</button>
+                <button (click)="card()" [class.ativo]="options == false">Cartão</button>
             </div>
-            <div class="tickect">
-                <div class="location-value">
-                    <h2>UNINASSAU - G1</h2>
-                    <h2>R$ 6,75</h2>
-                </div>
-                <div class="date-status">
-                    <h3>10/11/2025</h3>
-                    <h3>Pago</h3>
-                </div>
-                <div class="hour-id-btn">
-                    <div class="text">
-                        <h3>2h 35min</h3>
-                        <h3>ID: TK2024-001233</h3>
-                    </div>
-                    <a href="">Contestar</a>
-                </div>
-            </div>
-            <div class="tickect">
-                <div class="location-value">
-                    <h2>UNINASSAU - G1</h2>
-                    <h2>R$ 6,75</h2>
-                </div>
-                <div class="date-status">
-                    <h3>10/11/2025</h3>
-                    <h3>Pago</h3>
-                </div>
-                <div class="hour-id-btn">
-                    <div class="text">
-                        <h3>2h 35min</h3>
-                        <h3>ID: TK2024-001233</h3>
-                    </div>
-                    <a href="">Contestar</a>
-                </div>
+            <div class="wrap">
+                @if (options) {
+                    <app-history-ticket-component></app-history-ticket-component>
+                } @else {
+                    <app-history-card-component></app-history-card-component>
+                }
             </div>
         </div>
     </div>
