--- a/src/app/components/profile-component/profile-component.html
+++ b/src/app/components/profile-component/profile-component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <h1>Meu perfil</h1>
         <article class="user">
-            <img src="" alt="">
+            <img src="user-profile.svg" alt="user-profile">
             <div class="text">
                 <h3>João</h3>
                 <h3>joao@gmail.com</h3>
@@ -36,7 +36,7 @@
                 <li><a href="">Editar Dados</a></li>
                 <li><a href="">Cartões e Pagamentos</a></li>
                 <li><a href="">Configurações</a></li>
-                <li><a href="">Sair</a></li>
+                <li><a href="" class="exit">Sair</a></li>
             </ul>
         </article>
     </div>
