--- a/src/app/pages/history-ticket/history.html
+++ b/src/app/pages/history-ticket/history.html
@@ -1,3 +1,5 @@
 <app-hearder-component></app-hearder-component>
-<app-history-component></app-history-component>
+<div class="container">
+    <app-history-component></app-history-component>
+</div>
 <app-navegation-component></app-navegation-component>
