--- a/src/app/pages/profile/profile.html
+++ b/src/app/pages/profile/profile.html
@@ -1,3 +1,5 @@
 <app-hearder-component></app-hearder-component>
-<app-profile-component></app-profile-component>
+<div class="container">
+    <app-profile-component></app-profile-component>
+</div>
 <app-navegation-component></app-navegation-component>
