--- a/src/app/components/hearder-component/hearder-component.css
+++ b/src/app/components/hearder-component/hearder-component.css
@@ -1,8 +1,17 @@
+header {
+    position: fixed;
+    top: 0;
+    z-index: 1000;
+}
+
 .container {
+    width: 100vw;
+    height: 70px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 1rem .8rem;
+    padding: 1rem 1rem;
+    background-color: #0d1529;
 }
 
 h1 {
@@ -22,5 +31,40 @@ h1 {
 }
 
 .menu:hover {
-    background-color: blue;
+    background: #0f7cf1;
+}
+
+.options {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: start;
+    height: 40px;
+    width: 99%;
+
+    ul {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        border-radius: 10px;
+        padding: 8px;
+        background-color: #131931;
+        box-shadow: 2px 1px 8px 3px rgba(82, 82, 82, 0.2), -3px 1px 8px 1px rgba(82, 82, 82, 0.2), 2px 1px 8px 1px rgba(82, 82, 82, 0.2);
+    }
+
+    p {
+        width: 100%;
+        display: inline-block;
+        border-radius: 8px;
+        font-size: 20px;
+        padding: 8px;
+    }
+
+    p:hover {
+        background: #0f7cf1;
+    }
+}
+
+.invisible {
+    display: none;
 }
