--- a/src/app/components/profile-component/profile-component.css
+++ b/src/app/components/profile-component/profile-component.css
@@ -11,10 +11,25 @@
     display: flex;
     align-items: center;
     justify-content: start;
+    gap: 18px;
     width: 100%;
     padding: 20px;
     border: 1px solid #ccc;
+    background: linear-gradient(to right, transparent, rgb(11, 22, 67, .7));
     border-radius: 10px;
+
+    .text {
+        display: flex;
+        flex-direction: column;
+        gap: .5rem;
+    }
+
+    img {
+        width: 70px;
+        padding: 10px;
+        border-radius: 50px;
+        background: #0f7cf1;
+    }
 }
 
 .profile-information {
@@ -22,7 +37,7 @@
     flex-direction: column;
     align-items: start;
     justify-content: center;
-    gap: .5rem;
+    gap: 1.5rem;
     width: 100%;
     padding: 20px;
     border: 1px solid #ccc;
@@ -34,7 +49,7 @@
     flex-direction: column;
     align-items: start;
     justify-content: center;
-    gap: .5rem;
+    gap: 1.5rem;
     width: 100%;
 }
 
@@ -64,6 +79,10 @@ ul {
     justify-content: center;
     gap: .5rem;
     width: 100%;
+
+    .exit {
+        color: red;
+    }
 }
 
 li {
@@ -78,5 +97,5 @@ a {
 }
 
 a:hover {
-    background-color: #191b20;
+    background-color: rgb(24, 41, 73, .3);
 }
