--- a/src/app/components/balance-component/card-component/card-component.html
+++ b/src/app/components/balance-component/card-component/card-component.html
@@ -25,7 +25,7 @@
                 <h1>Recargar Cartão</h1>
                 <div class="recharge-choice">
                     <label for="Valor">Valor da recarga</label>
-                    <input type="text" placeholder="R$ 99,99">
+                    <input type="number" placeholder="R$ 99,99">
                 </div>
                 <div class="recharge-options">
                     <div class="option-recharge">
