--- a/src/app/components/current-ticket-component/current-ticket-component.html
+++ b/src/app/components/current-ticket-component/current-ticket-component.html
@@ -37,7 +37,7 @@
             <p>ID: TK2024-001234</p>
         </div>
         <div class="wrapper">
-            <button class="btn">Pagar Ticket</button>
+            <button class="btn" (click)="paymentCurrentTicketNavegation()">Pagar Ticket</button>
         </div>
     </div>
 </section>
