--- a/src/app/components/history-component/history-ticket-component/history-ticket-component.html
+++ b/src/app/components/history-component/history-ticket-component/history-ticket-component.html
@@ -2,7 +2,7 @@
     <div class="ticket-wrap">
         <div class="tickect">
             <div class="location-value">
-                <h2>UNINASSAU - G1</h2>
+                <h2>UNINASSAU</h2>
                 <h2>R$ 6,75</h2>
             </div>
             <div class="date-status">
@@ -18,7 +18,7 @@
         </div>
         <div class="tickect">
             <div class="location-value">
-                <h2>UNINASSAU - G1</h2>
+                <h2>UNINASSAU</h2>
                 <h2>R$ 6,75</h2>
             </div>
             <div class="date-status">
@@ -35,7 +35,7 @@
         
         <div class="tickect">
             <div class="location-value">
-                <h2>UNINASSAU - G1</h2>
+                <h2>UNINASSAU</h2>
                 <h2>R$ 6,75</h2>
             </div>
             <div class="date-status">
@@ -51,7 +51,7 @@
         </div>
         <div class="tickect">
             <div class="location-value">
-                <h2>UNINASSAU - G1</h2>
+                <h2>UNINASSAU</h2>
                 <h2>R$ 6,75</h2>
             </div>
             <div class="date-status">
@@ -67,7 +67,7 @@
         </div>
         <div class="tickect">
             <div class="location-value">
-                <h2>UNINASSAU - G1</h2>
+                <h2>UNINASSAU</h2>
                 <h2>R$ 6,75</h2>
             </div>
             <div class="date-status">
@@ -83,7 +83,7 @@
         </div>
         <div class="tickect">
             <div class="location-value">
-                <h2>UNINASSAU - G1</h2>
+                <h2>UNINASSAU</h2>
                 <h2>R$ 6,75</h2>
             </div>
             <div class="date-status">
@@ -99,7 +99,7 @@
         </div>
         <div class="tickect">
             <div class="location-value">
-                <h2>UNINASSAU - G1</h2>
+                <h2>UNINASSAU</h2>
                 <h2>R$ 6,75</h2>
             </div>
             <div class="date-status">
