--- a/src/app/components/history-component/history-card-component/history-card-component.css
+++ b/src/app/components/history-component/history-card-component/history-card-component.css
@@ -20,7 +20,7 @@
     gap: 1.5rem;
     width: 100%;
     height: 100px;
-    padding: 15px;
+    padding: 20px 15px;
     font-size: 16px;
     border-radius: 10px;
     border: 1px solid #ccc;
