--- a/src/app/components/profile-component/profile-component.html
+++ b/src/app/components/profile-component/profile-component.html
@@ -33,10 +33,10 @@
         <article class="configuration">
             <h2>Configurações</h2>
             <ul>
-                <li><a href="">Editar Dados</a></li>
-                <li><a href="">Cartões e Pagamentos</a></li>
-                <li><a href="">Configurações</a></li>
-                <li><a href="" class="exit">Sair</a></li>
+                <li><img src="edit-profile.svg" alt=""> <a href="">Editar Dados</a></li>
+                <li><img src="credit-card.svg" alt=""><a href="">Cartões e Pagamentos</a></li>
+                <li><img src="gear.svg" alt=""><a href="">Configurações</a></li>
+                <li><img src="exit.svg" alt=""><a href="" class="exit">Sair</a></li>
             </ul>
         </article>
     </div>
