--- a/src/app/components/current-ticket-component/payment-current-ticket-component/payment-current-ticket-component.css
+++ b/src/app/components/current-ticket-component/payment-current-ticket-component/payment-current-ticket-component.css
@@ -45,15 +45,13 @@
 
     .details {
         display: flex;
-        gap: 10px;
+        gap: 5px;
     }
 
     .space {
         width: 100%;
         display: flex;
         justify-content: space-between;
-        position: relative;
-        top: 10px;
     }
 
     img {
@@ -113,11 +111,11 @@
 }
 
 .payment-method-title {
-    padding: 30px;
+    padding: 30px 43px;
 }
 
 .wrapper {
-    width: 100vw;
+    width: 98vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -177,10 +175,59 @@
     background: #0d6bcf;
 }
 
-.payment-prepaid-card {
-    width: 100vw;
+.choice-options {
+    height: 320px;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+}
+
+.content-prepaid-card {
+    width: 90%;
+}
+
+.invisible-options {
+    display: none;
+}
+
+.options-prepaid-card {
+    height: 220px;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    align-content: center;
+    padding: 10px;
+    gap: 15px;
+    overflow-x: auto;
+}
+
+.options-prepaid-card::-webkit-scrollbar {
+    display: none;
+}
+
+.cards {
+    background: #0f62f1;
+    border-radius: 8px;
+    width: 350px;
+    height: 180px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 20px;
+    gap: 30px;
+    transition: .5s;
+    cursor: pointer;
+
+    .plus-card {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    img {
+        width: 50px;
+    }
+}
+
+.cards:hover {
+    transform: scale(1.03);
 }
