--- a/src/app/components/profile-component/profile-component.css
+++ b/src/app/components/profile-component/profile-component.css
@@ -22,6 +22,7 @@
         display: flex;
         flex-direction: column;
         gap: .5rem;
+        font-size: 18px;
     }
 
     img {
@@ -58,6 +59,7 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    font-size: 18px;
 }
 
 .configuration {
@@ -70,6 +72,10 @@
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 10px;
+
+    img {
+        width: 28px;
+    }
 }
 
 ul {
@@ -81,12 +87,14 @@ ul {
     width: 100%;
 
     .exit {
-        color: red;
+        color: #ff0000;
     }
 }
 
 li {
     width: 100%;
+    font-size: 18px;
+    display: flex;
 }
 
 a {
