--- a/src/app/components/balance-component/card-component/card-component.html
+++ b/src/app/components/balance-component/card-component/card-component.html
@@ -21,7 +21,7 @@
 
 
         <div class="card-recharge">
-            <div class="wrap">
+            <div class="wrapper">
                 <h1>Recargar Cartão</h1>
                 <div class="recharge-choice">
                     <label for="Valor">Valor da recarga</label>
@@ -68,7 +68,7 @@
                     </div>
                     <h2>-R$ 6,75</h2>
                 </div>
-                
+
             </div>
         </div>
     </div>
