--- a/src/app/components/balance-component/card-component/card-component.css
+++ b/src/app/components/balance-component/card-component/card-component.css
@@ -3,15 +3,16 @@
 }
 
 .top-info {
-    height: 70px;
+    height: 55px;
     display: flex;
-    gap: 20px;
+    gap: 15px;
     border-bottom: 1px solid #ccc;
 
     h1 {
         position: relative;
-        top: 17px;
-    }                                                                                                                                                                                                                                                                                                                                                                                                                                                                   
+        top: 10px;
+        font-size: 28px;
+    }
 
     img {
         width: 30px;
@@ -41,13 +42,14 @@
     display: flex;
     flex-direction: column;
     gap: 40px;
+    font-size: 13px;
 }
 
 .calendar {
     display: flex;
     gap: 6px;
     position: relative;
-    top: 70px;
+    top: 65px;
 
     img {
         width: 30px;
@@ -65,7 +67,7 @@
     justify-content: center;
     align-items: center;
 
-    .wrap {
+    .wrapper {
         width: 90%;
         height: 350px;
         display: flex;
@@ -81,11 +83,11 @@
     }
 }
 
-.wrap input {
+.wrapper input {
     font-size: 18px;
 }
 
-.wrap input:placeholder-shown {
+.wrapper input:placeholder-shown {
     font-size: 18px;
 }
 
@@ -106,7 +108,7 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    font-size: 12px;
+    font-size: 10px;
 }
 
 .recharge-options .option-recharge:hover {
@@ -158,7 +160,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    
+
     .wrap {
         width: 90%;
         height: 350px;
@@ -184,7 +186,7 @@
     .recent-transactions h1 {
         font-size: 22px;
     }
-    
+
     .recent-transactions h2 {
         font-size: 20px;
     }
@@ -200,5 +202,13 @@
 }
 
 .wrap > h1 {
-    font-size: 30px;
+    font-size: 25px;
+}
+
+@media (max-width: 1280px) {
+    .wrap > h1 {
+    display: flex;
+    justify-content: center;
+    font-size: 25px;
+}
 }
