--- a/src/app/components/current-ticket-component/payment-current-ticket-component/payment-current-ticket-component.css
+++ b/src/app/components/current-ticket-component/payment-current-ticket-component/payment-current-ticket-component.css
@@ -6,14 +6,15 @@
 }
 
 .top-info {
-    height: 70px;
+    height: 55px;
     display: flex;
-    gap: 20px;
+    gap: 15px;
     border-bottom: 1px solid #ccc;
 
     h1 {
         position: relative;
-        top: 17px;
+        top: 10px;
+        font-size: 28px;
     }
 
     img {
@@ -48,12 +49,6 @@
         gap: 5px;
     }
 
-    .space {
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-    }
-
     img {
         width: 50px;
         padding: 10px;
@@ -73,6 +68,20 @@
 
     .details:last-child img {
         background-color: #0bb833;
+    }
+}
+
+.details .space {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+
+    h2 {
+        font-size: 20px;
+    }
+
+    h3 {
+        font-size: 15px;
     }
 }
 
@@ -111,7 +120,8 @@
 }
 
 .payment-method-title {
-    padding: 30px 43px;
+    padding: 20px;
+    font-size: 15px;
 }
 
 .wrapper {
@@ -136,7 +146,8 @@
 
     h1 {
         position: relative;
-        top: 12px;
+        top: 16px;
+        font-size: 20px;
     }
 
     img {
@@ -176,18 +187,15 @@
 }
 
 .choice-options {
-    height: 320px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    display: none;
 }
 
 .content-prepaid-card {
     width: 90%;
-}
-
-.invisible-options {
-    display: none;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .options-prepaid-card {
@@ -230,4 +238,12 @@
 
 .cards:hover {
     transform: scale(1.03);
+}
+
+@media (min-width: 1280px) {
+    .payment-method-title {
+        width: 500px;
+        position: relative;
+        left: 30px;
+    }
 }
