--- a/src/app/components/history-component/history-component.css
+++ b/src/app/components/history-component/history-component.css
@@ -7,24 +7,25 @@
     min-height: 80vh;
     height: fit-content;
     position: relative;
-    top: 50px;
+    overflow: hidden;
 
     .title {
         width: 100%;
         height: 200px;
         z-index: 0;
         position: absolute;
-        top: -50px;
+        top: -15px;
         background: #0f7cf1;
         padding: 30px;
         border-radius: 0px 0px 35px 35px;
+        font-size: 15px;
     }
 
     .content {
         z-index: 1;
         position: relative;
         width: 96%;
-        top: 30px;
+        top: 60px;
         margin: 0 auto;
         display: flex;
         flex-direction: column;
@@ -34,8 +35,8 @@
 }
 
 .title h1 {
-    position: relative;
-    left: 30px;
+    display: flex;
+    justify-content: center;
 }
 
 .wrap {
