--- a/src/app/components/login-registration-component/registration-component/registration-component.html
+++ b/src/app/components/login-registration-component/registration-component/registration-component.html
@@ -23,26 +23,26 @@
             <h1>UNINASSAU</h1>
             <p>Estacionamento Inteligente</p>
         </div>
-        <form>
+        <form [formGroup]="form" (ngSubmit)="onSubmit()">
             <div class="text-wrap">
                 <h1>Cadastro de {{typeUser}} </h1>
                 <p>Preencha seus dados</p>
             </div>
             <div class="form-content">
                 <label for="nome">Nome</label>
-                <input type="text" id="nome">
+                <input type="text" id="nome" formControlName="Nome">
             </div>
             <div class="form-content">
                 <label for="email">Email</label>
-                <input type="email" id="email">
+                <input type="email" id="email" formControlName="Email">
             </div>
             <div class="form-content">
                 <label for="matricula">Matrícula</label>
-                <input type="number" id="matricula">
+                <input type="number" id="matricula" formControlName="Matricula">
             </div>
             <div class="form-content">
                 <label for="senha">Senha</label>
-                <input type="password" id="senha">
+                <input type="password" id="senha" formControlName="Senha">
                 <button type="button" (click)="isLoginMode()" class="go-to">Já tem conta? </button>
             </div>
             <button type="submit" class="submit">Entrar</button>
