Consertando o erro do header no safari

--- a/src/app/components/hearder-component/hearder-component.css
+++ b/src/app/components/hearder-component/hearder-component.css
@@ -28,6 +28,10 @@ h1 {
     border-radius: 6px;
     background-color: transparent;
     cursor: pointer;
+
+    img {
+        height: 24px;
+    }
 }
 
 .menu:hover {
