--- a/src/app/components/balance-component/card-solicitation-component/card-solicitation-component.css
+++ b/src/app/components/balance-component/card-solicitation-component/card-solicitation-component.css
@@ -1,3 +1,10 @@
+.request {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
 .top-info {
     height: 55px;
     display: flex;
@@ -16,14 +23,34 @@
     }
 }
 
-.request {
-    padding: 20px;
+.form {
+    width: 95%;
     display: flex;
-    flex-direction: column;                                         
-    gap: 40px;
+    justify-content: center;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+
+    .select {
+        height: 50px;
+        display: flex;
+        align-items: center;
+
+        &,&::picker(select) {
+            appearance: base-select;
+            padding: 10px;
+            border: none;
+            border-radius: 10px;
+            background-color: #0c1b53;
+            color: white;
+        }
+
+        &::picker(select) {
+            margin-block-start: 5px;
+        }
+    }
 }
 
-.content-request{
+.content-request {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -36,8 +63,6 @@
         display: flex;
         flex-direction: column;
         gap: 30px;
-        border: 1px solid #ccc;
-        border-radius: 10px;
     }
 
     .info {
@@ -128,13 +153,13 @@
 }
 
 @media (min-width: 1280px) {
-    .content-request .card-to-request{
+    .content-request .card-to-request {
         width: 80vw;
         height: 200px;
         gap: 50px;
     }
 
-    .content-request .space {
+    .content-request .form {
         width: 80vw;
     }
 }
