--- a/src/app/components/current-ticket-component/payment-current-ticket-component/payment-current-ticket-component.css
+++ b/src/app/components/current-ticket-component/payment-current-ticket-component/payment-current-ticket-component.css
@@ -90,7 +90,7 @@
     display: flex;
     justify-content: space-between;
     position: relative;
-    top: 10px;
+    top: 15px;
 
     h3 {
         position: relative;
@@ -165,6 +165,7 @@
 }
 
 .confirm-payment {
+    width: 100%;
     display: flex;
     justify-content: center;
 }
@@ -196,6 +197,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    h1 {
+        font-size: 25px;
+        text-align: center;
+    }
 }
 
 .options-prepaid-card {
@@ -210,40 +216,4 @@
 
 .options-prepaid-card::-webkit-scrollbar {
     display: none;
-}
-
-.cards {
-    background: #0f62f1;
-    border-radius: 8px;
-    width: 350px;
-    height: 180px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 20px;
-    gap: 30px;
-    transition: .5s;
-    cursor: pointer;
-
-    .plus-card {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    img {
-        width: 50px;
-    }
-}
-
-.cards:hover {
-    transform: scale(1.03);
-}
-
-@media (min-width: 1280px) {
-    .payment-method-title {
-        width: 500px;
-        position: relative;
-        left: 30px;
-    }
 }
