--- a/src/app/components/profile-component/profile-component.html
+++ b/src/app/components/profile-component/profile-component.html
@@ -4,9 +4,9 @@
         <article class="user">
             <img src="user-profile.svg" alt="user-profile">
             <div class="text">
-                <h3>João</h3>
-                <h3>joao@gmail.com</h3>
-                <h3>Matrícula: 99999999</h3>
+                <h3>{{nome}}</h3>
+                <h3>{{email}}</h3>
+                <h3>Matrícula: {{matricula}}</h3>
             </div>
         </article>
         <article class="profile-information">
@@ -14,11 +14,11 @@
             <div class="information">
                 <div class="information-wrap">
                     <h4>Nome</h4>
-                    <h4>joao</h4>
+                    <h4>{{nome}}</h4>
                 </div>
                 <div class="information-wrap">
                     <h4>Email</h4>
-                    <h4>joao@gmail.com</h4>
+                    <h4>{{email}}</h4>
                 </div>
                 <div class="information-wrap">
                     <h4>Telefone</h4>
@@ -26,7 +26,7 @@
                 </div>
                 <div class="information-wrap">
                     <h4>Matrícula</h4>
-                    <h4>9999999</h4>
+                    <h4>{{matricula}}</h4>
                 </div>
             </div>
         </article>
