--- a/src/styles.css
+++ b/src/styles.css
@@ -22,3 +22,8 @@ a {
 .container {
     width: 100%;
 }
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+}
